[package]
name = "darplex-plugin"
version = "0.1.0"
edition = "2024"

[lib] 
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.5.0"
pumpkin-plugin-api = { version = "0.1.0", path = "../Pumpkin/pumpkin-plugin-api/", package = "pumpkin-plugin-api" }
strum = "0.28.0"
strum_macros = "0.28.0"
tracing = "0.1"

[profile.release] 
lto = true
